--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,82 @@
-Django>=2.1
+apt-clone==0.2.1
+apturl==0.5.2
+beautifulsoup4==4.6.0
+Brlapi==0.6.6
+certifi==2019.3.9
+chardet==3.0.4
+command-not-found==0.3
+configobj==5.0.6
+cupshelpers==1.0
+defer==1.0.6
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==2.2.2
+django-braces==1.13.0
+django-cors-middleware==1.3.1
+django-filter==2.2.0
+django-heroku==0.3.1
+django-jet==1.0.8
+django-oauth-toolkit==1.2.0
+django-rest-framework-social-oauth2==1.1.0
+djangorestframework==3.9.4
+evdev==0.7.0
+gunicorn==19.9.0
+httplib2==0.9.2
+idna==2.8
+louis==3.5.0
+lutris==0.5.3
+macaroonbakery==1.1.3
+Mako==1.0.7
+Markdown==3.1.1
+MarkupSafe==1.0
+meld==3.18.0
+nemo-emblems==4.2.0
+netifaces==0.10.4
+oauthlib==3.0.1
+onboard==1.4.1
+PAM==0.4.2
+pexpect==4.2.1
 Pillow==5.2.0
-pytz==2018.5
+protobuf==3.0.0
+psutil==5.4.2
+psycopg2==2.7.4
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0.1
+pygobject==3.26.1
+PyICU==1.9.8
+pyinotify==0.9.6
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyRFC3339==1.0
+python-apt==1.6.4
+python-debian==0.1.32
+python-decouple==3.1
+python-distutils-extra==2.39
+python-xapp==1.6.0
+python-xlib==0.20
+python3-openid==3.1.0
+pytz==2019.1
+pyxdg==0.25
+PyYAML==3.12
+redis==3.3.11
+reportlab==3.4.0
+requests==2.22.0
+requests-oauthlib==1.2.0
+requests-unixsocket==0.1.5
+sessioninstaller==0.0.0
+setproctitle==1.1.10
+six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.2.0
+sqlparse==0.3.0
+system-service==0.3
+systemd-python==234
+tinycss==0.4
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+urllib3==1.25.3
+whitenoise==4.1.4
+xkit==0.0.0
