--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-apturl==0.5.2
-beautifulsoup4==4.6.0
-Brlapi==0.6.6
-certifi==2019.3.9
-chardet==3.0.4
-command-not-found==0.3
+apturl>=0.5.2
+beautifulsoup4>=4.6.0
+Brlapi>=0.6.6
+certifi>=2019.3.9
+chardet>=3.0.4
+command-not-found>=0.3
 configobj==5.0.6
 cupshelpers==1.0
 defer==1.0.6
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==2.2.2
+Django>=2.2.2
 django-braces==1.13.0
 django-cors-middleware==1.3.1
 django-filter==2.2.0
